全链路日志加上traceId,设置项目热启动

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- Spring Boot 热部署核心依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional> <!-- 防止依赖传递 -->
+        </dependency>
     </dependencies>
 
 
