集成spring自带定时任务 Scheduled

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <scope>runtime</scope>
             <optional>true</optional> <!-- 防止依赖传递 -->
         </dependency>
+
+        <!-- AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 
